--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cannon-es": "^0.20.0",
     "three": "^0.179.1",
     "vite": "^7.0.6"
   }
